google verification tag

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="author" content="Miguel Araya" />
+	<meta name="google-site-verification" content="3d5SGivLUJ8xlaqeHfFXXr9DAQO_FV983Zi48mb9d_I" />
 
 	<!-- Stylesheets
 	============================================= -->
