--- a/index.html
+++ b/index.html
@@ -243,7 +243,6 @@
 
 		</section>
 		
-		<div class="clear"></div>
 
 
 		<section id="section-team" class="page-section">
@@ -522,6 +521,16 @@
 	<!-- Footer Scripts
 	============================================= -->
 	<script type="text/javascript" src="js/functions.js"></script>
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-93746329-1', 'auto');
+	  ga('send', 'pageview');
+
+	</script>
 	
 </body>
 </html>
